dropshot/tests/fail/bad_server_only3.stderr
error: endpoint `bad_endpoint` must accept RequestContext<Self::MyContext> as its first argument
  --> tests/fail/bad_server_only3.rs:30:32
   |
30 |         _rqctx: RequestContext<()>,
   |                                ^^

error: endpoint `bad_endpoint2` must accept RequestContext<Self::MyContext> as its first argument
  --> tests/fail/bad_server_only3.rs:38:32
   |
38 |         _rqctx: RequestContext<Self::Context>,
   |                                ^^^^^^^^^^^^^
